# ludviggl-greedy

./: classrooms.cc  dune-project  entertainment.cc  exact_change.cc  joggers.cc  ludviggl_greedy.opam  train_sorting.cc
ocaml-too-slow/: change.ml  classrooms.ml  dune  train_sorting.ml
too-slow-for-ocaml/: exact_change.cc  train_sorting.cc
