(lang dune 3.11)

(name ludviggl_greedy)

(generate_opam_files true)

(authors "Ludvig Gunne Lindström")

(package
 (name ludviggl_greedy)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
